Fix Disqus formatting on mobile screens
The div for Disqus wasn't being properly switched to relative width on small screens. Add media query for div#disqus_thread to fix this.

--- a/styles/main.css
+++ b/styles/main.css
@@ -211,4 +211,8 @@ a.nav-link article:hover {
   article > header {
     width: 100%;
   }
+
+  div#disqus_thread {
+    width: 95%;
+  }
 }
